// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@client @export tests should NOT refetch if an @export variable has not changed, the current fetch policy is not cache-only, and the query includes fields that need to be resolved remotely 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field 'postCount' while writing result {
  \\"currentAuthorId\\": 100
}",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`@client @export tests should allow @client @export variables to be used with remote queries 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field 'postCount' while writing result {
  \\"currentAuthor\\": {
    \\"name\\": \\"John Smith\\",
    \\"authorId\\": 100,
    \\"__typename\\": \\"Author\\"
  }
}",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`@client @export tests should refetch if an @export variable changes, the current fetch policy is not cache-only, and the query includes fields that need to be resolved remotely 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field 'postCount' while writing result {
  \\"appContainer\\": {
    \\"systemDetails\\": {
      \\"currentAuthor\\": {
        \\"name\\": \\"John Smith\\",
        \\"authorId\\": 100,
        \\"__typename\\": \\"Author\\"
      },
      \\"__typename\\": \\"SystemDetails\\"
    },
    \\"__typename\\": \\"AppContainer\\"
  }
}",
    ],
    Array [
      "Missing field 'title' while writing result {
  \\"loggedInReviewerId\\": 100,
  \\"__typename\\": \\"Post\\",
  \\"id\\": 10
}",
    ],
    Array [
      "Missing field 'reviewerDetails' while writing result {
  \\"postRequiringReview\\": {
    \\"loggedInReviewerId\\": 100,
    \\"__typename\\": \\"Post\\",
    \\"id\\": 10
  }
}",
    ],
    Array [
      "Missing field 'id' while writing result {
  \\"__typename\\": \\"Post\\"
}",
    ],
    Array [
      "Missing field 'title' while writing result {
  \\"__typename\\": \\"Post\\"
}",
    ],
    Array [
      "Missing field 'reviewerDetails' while writing result {
  \\"postRequiringReview\\": {
    \\"__typename\\": \\"Post\\"
  }
}",
    ],
    Array [
      "Missing field 'post' while writing result {
  \\"primaryReviewerId\\": 100,
  \\"secondaryReviewerId\\": 200
}",
    ],
    Array [
      "Missing field 'postCount' while writing result {
  \\"currentAuthorId\\": 100
}",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
